[tool.poetry]
name = "ocean_cleanup_challenge"
version = "0.1.0"
description = "kili technology and ocean cleanups annotation challenge december 2022"
authors = ["lucy.bowles <lucy.bowles@brandwatch.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
tqdm = "^4.64.1"
wandb = "^0.13.5"
torch = {url = "https://download.pytorch.org/whl/nightly/cpu/torch-1.14.0.dev20221007-cp310-none-macosx_11_0_arm64.whl"}
cleanlab = ">=2.0.0"
click = "^8.1.3"
datasets = "<=2.2"
kili = ">=2.115"
Jinja2 = "^3.1.2"
nltk = ">=3.3"
numpy = "^1.23.5"
requests = "^2.28.1"
scikit-learn = "^1.1.3"
evaluate = "^0.3.0"
seqeval = "^1.2.2"
tabulate = "^0.9.0"
termcolor = "^2.1.1"
transformers = "^4.25.1"
img2vec-pytorch = "1.0.1"
more-itertools = "^9.0.0"
typing-extensions = "^4.4.0"
ipython = "^8.7.0"
ratelimit = "^2.2.1"
opencv-python = "^4.6.0"
shapely = "^1.8.5"
pydantic = "^1.10.2"
pytest-mock = "^3.10.0"
backoff = "^2.2.1"
loguru = "^0.6.0"
beautifulsoup4 = "^4.11.1"


[tool.poetry.dev-dependencies]
mypy = "^0.991"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
jupyterlab = "^3.5.1"
plotly = "^5.11.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
